Updated the searchFilter based on criteria for and update integration test and unit test. Added pagination to speed the retrieval of data.